--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,6 @@ Priority: optional
 Maintainer: Utopia Maintenance Team <pkg-utopia-maintainers@alioth-lists.debian.net>
 Uploaders: Sjoerd Simons <sjoerd@debian.org>
 Build-Depends: debhelper-compat (= 13),
-               doxygen (>= 1.9.0),
                gobject-introspection,
                libgirepository1.0-dev,
                libglib2.0-dev (>= 2.58),
@@ -67,16 +66,16 @@ Description: modular session / policy manager for PipeWire
  .
  This package contains the WirePlumber daemon and command-line utilities.
 
-Package: gir1.2-wp-0.4
-Section: introspection
-Architecture: linux-any
-Depends: ${misc:Depends},
-         ${gir:Depends},
-         libwireplumber-0.4-0 (= ${binary:Version}),
-Description: GObject introspection files for WirePlumber
- WirePlumber is a modular session / policy manager for PipeWire and a
- GObject-based high-level library that wraps PipeWire's API, providing
- convenience for writing the daemon's modules as well as external tools for
- managing PipeWire.
- .
- This package contains the GObject-introspection data in binary typelib format.
+#Package: gir1.2-wp-0.4
+#Section: introspection
+#Architecture: linux-any
+#Depends: ${misc:Depends},
+#         ${gir:Depends},
+#         libwireplumber-0.4-0 (= ${binary:Version}),
+#Description: GObject introspection files for WirePlumber
+# WirePlumber is a modular session / policy manager for PipeWire and a
+# GObject-based high-level library that wraps PipeWire's API, providing
+# convenience for writing the daemon's modules as well as external tools for
+# managing PipeWire.
+# .
+# This package contains the GObject-introspection data in binary typelib format.
